--- a/debian/control
+++ b/debian/control
@@ -31,8 +31,8 @@ Build-Depends:
  pkg-config
 Standards-Version: 4.3.0
 Homepage: https://cmus.github.io/
-Vcs-Git: https://github.com/geek1011/cmus.git
-Vcs-Browser: https://github.com/geek1011/cmus
+Vcs-Git: https://github.com/pgaskin/cmus.git
+Vcs-Browser: https://github.com/pgaskin/cmus
 
 Package: cmus
 Architecture: any
